story(ccls-1743): Add endpoint and controller method
