# soa-gateway-api/open-api-specification.yml
@@ -245,6 +245,37 @@ paths:
           description: 'Not found'
         '500':
           description: 'Internal server error'
+  /cases/{case-reference-number}:
+    get:
+      tags:
+        - cases
+      summary: 'Get Case Details'
+      operationId: 'getCase'
+      x-spring-paginated: false
+      parameters:
+        - name: 'case-reference-number'
+          in: 'path'
+          required: true
+          schema:
+            type: 'string'
+            example: '1234567890'
+        - $ref: '#/components/parameters/soaGatewayUserLoginId'
+        - $ref: '#/components/parameters/soaGatewayUserRole'
+      responses:
+        '200':
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/caseDetail"
+        '400':
+          description: 'Bad request'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'Not found'
+        '500':
+          description: 'Internal server error'
 components:
   parameters:
     maxRecords:
